# socket_programming

./: .gitignore  Cargo.toml  Dockerfile  README.md  client  jenkins_test.jenkinsfile  server
certs/: my_socket_prog.test.cert.pem  my_socket_prog.test.key.pem  my_socket_prog.test.pkcs12.pfx
src/: client.rs  encryption_client.rs  mtls_client.rs  mtls_server.rs  server.rs  tls_client.rs  tls_server.rs
