[package]
name = "socket_programming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "tls_server"
path = "src/tls_server.rs"

[[bin]]
name = "tls_client"
path = "src/tls_client.rs"

[dependencies]
openssl = "0.10.45"
lazy_static = "1.4.0"
native-tls = "0.2.11"
simplelog = "0.12.0"
log = "0.4.17"
chrono = "0.4.23"
time = "0.3.17"
rpassword = "7.2.0"